// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`FileAvatar Snapshot - different file types 1`] = `
<View
  className="inline-flex "
>
  <View
    className="h-fit w-fit"
  >
    <View
      className="flex shrink-0 items-center justify-center overflow-hidden text-center font-semibold w-8 h-8 rounded border border-solid border-f0-border-secondary bg-f0-background"
    >
      <Text
        className="font-semibold text-sm text-f0-foreground-accent"
      >
        PDF
      </Text>
    </View>
  </View>
</View>
`;

exports[`FileAvatar Snapshot - different file types 2`] = `
<View
  className="inline-flex "
>
  <View
    className="h-fit w-fit"
  >
    <View
      className="flex shrink-0 items-center justify-center overflow-hidden text-center font-semibold w-8 h-8 rounded border border-solid border-f0-border-secondary bg-f0-background"
    >
      <Text
        className="font-semibold text-sm text-f0-foreground-info"
      >
        IMG
      </Text>
    </View>
  </View>
</View>
`;

exports[`FileAvatar Snapshot - different file types 3`] = `
<View
  className="inline-flex "
>
  <View
    className="h-fit w-fit"
  >
    <View
      className="flex shrink-0 items-center justify-center overflow-hidden text-center font-semibold w-8 h-8 rounded border border-solid border-f0-border-secondary bg-f0-background"
    >
      <Text
        className="font-semibold text-sm text-f0-foreground-info"
      >
        DOC
      </Text>
    </View>
  </View>
</View>
`;

exports[`FileAvatar Snapshot - different file types 4`] = `
<View
  className="inline-flex "
>
  <View
    className="h-fit w-fit"
  >
    <View
      className="flex shrink-0 items-center justify-center overflow-hidden text-center font-semibold w-8 h-8 rounded border border-solid border-f0-border-secondary bg-f0-background"
    >
      <Text
        className="font-semibold text-sm text-f0-foreground-positive"
      >
        XLS
      </Text>
    </View>
  </View>
</View>
`;

exports[`FileAvatar Snapshot - different file types 5`] = `
<View
  className="inline-flex "
>
  <View
    className="h-fit w-fit"
  >
    <View
      className="flex shrink-0 items-center justify-center overflow-hidden text-center font-semibold w-8 h-8 rounded border border-solid border-f0-border-secondary bg-f0-background"
    >
      <Text
        className="font-semibold text-sm text-f0-foreground-warning"
      >
        PPT
      </Text>
    </View>
  </View>
</View>
`;

exports[`FileAvatar Snapshot - different file types 6`] = `
<View
  className="inline-flex "
>
  <View
    className="h-fit w-fit"
  >
    <View
      className="flex shrink-0 items-center justify-center overflow-hidden text-center font-semibold w-8 h-8 rounded border border-solid border-f0-border-secondary bg-f0-background"
    >
      <Text
        className="font-semibold text-sm text-f0-foreground-secondary"
      >
        TXT
      </Text>
    </View>
  </View>
</View>
`;

exports[`FileAvatar Snapshot - different file types 7`] = `
<View
  className="inline-flex "
>
  <View
    className="h-fit w-fit"
  >
    <View
      className="flex shrink-0 items-center justify-center overflow-hidden text-center font-semibold w-8 h-8 rounded border border-solid border-f0-border-secondary bg-f0-background"
    >
      <Text
        className="font-semibold text-sm text-f0-foreground-info"
      >
        VID
      </Text>
    </View>
  </View>
</View>
`;

exports[`FileAvatar Snapshot - different file types 8`] = `
<View
  className="inline-flex "
>
  <View
    className="h-fit w-fit"
  >
    <View
      className="flex shrink-0 items-center justify-center overflow-hidden text-center font-semibold w-8 h-8 rounded border border-solid border-f0-border-secondary bg-f0-background"
    >
      <Text
        className="font-semibold text-sm text-f0-foreground-accent"
      >
        AUD
      </Text>
    </View>
  </View>
</View>
`;

exports[`FileAvatar Snapshot - different file types 9`] = `
<View
  className="inline-flex "
>
  <View
    className="h-fit w-fit"
  >
    <View
      className="flex shrink-0 items-center justify-center overflow-hidden text-center font-semibold w-8 h-8 rounded border border-solid border-f0-border-secondary bg-f0-background"
    >
      <Text
        className="font-semibold text-sm text-f0-foreground-warning"
      >
        ZIP
      </Text>
    </View>
  </View>
</View>
`;

exports[`FileAvatar Snapshot - different file types 10`] = `
<View
  className="inline-flex "
>
  <View
    className="h-fit w-fit"
  >
    <View
      className="flex shrink-0 items-center justify-center overflow-hidden text-center font-semibold w-8 h-8 rounded border border-solid border-f0-border-secondary bg-f0-background"
    >
      <Text
        className="font-semibold text-sm text-f0-foreground-positive"
      >
        CSV
      </Text>
    </View>
  </View>
</View>
`;

exports[`FileAvatar Snapshot - different file types 11`] = `
<View
  className="inline-flex "
>
  <View
    className="h-fit w-fit"
  >
    <View
      className="flex shrink-0 items-center justify-center overflow-hidden text-center font-semibold w-8 h-8 rounded border border-solid border-f0-border-secondary bg-f0-background"
    >
      <Text
        className="font-semibold text-sm text-f0-foreground-accent"
      >
        HTM
      </Text>
    </View>
  </View>
</View>
`;

exports[`FileAvatar Snapshot - different file types 12`] = `
<View
  className="inline-flex "
>
  <View
    className="h-fit w-fit"
  >
    <View
      className="flex shrink-0 items-center justify-center overflow-hidden text-center font-semibold w-8 h-8 rounded border border-solid border-f0-border-secondary bg-f0-background"
    >
      <Text
        className="font-semibold text-sm text-f0-foreground-secondary"
      >
        MD
      </Text>
    </View>
  </View>
</View>
`;

exports[`FileAvatar Snapshot - different file types 13`] = `
<View
  className="inline-flex "
>
  <View
    className="h-fit w-fit"
  >
    <View
      className="flex shrink-0 items-center justify-center overflow-hidden text-center font-semibold w-8 h-8 rounded border border-solid border-f0-border-secondary bg-f0-background"
    >
      <Text
        className="font-semibold text-sm text-f0-foreground"
      >
        FIL
      </Text>
    </View>
  </View>
</View>
`;
